# kdapps

./: .gitignore  KaspaTrack Backend Mainnet Deployment SOP.md  KaspaTrack Developer Documentation.md  KaspaTrack_Deployment_SOP.md  README.md
backend/kaspatrack-backend/: .dockerignore  Cargo.toml  Dockerfile  KaspaTrack Backend MVP - Technical Achievement Report.md  Quick Deployment Cheat Sheet.md  README.md  RustWebBackendDeployment.md  build.ps1  build.sh  docker-compose.yml  env.example  install-rust.ps1  setup-env.ps1  setup-env.sh
backend/kaspatrack-backend/src/: main.rs
kaspatrack-frontend/: KaspaTrack Frontend Deployment Guide.md  README.md  env.example  package-lock.json  package.json
kaspatrack-frontend/src/: App.css  App.tsx
kaspatrack-frontend/src/components/: PortfolioInput.tsx
kaspatrack-frontend/src/contexts/: PortfolioContext.tsx
kaspatrack-frontend/src/services/: api.ts
